--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="halls">
           <article class="hall">
-            <div class="hall-img" style="background-image:url('https://picsum.photos/seed/hall1/800/500')"></div>
+            <div class="hall-img" style="background-image:url('img/vip.jpg')"></div>
             <div class="hall-body">
               <h3>VIP</h3>
               <p class="muted">Огромный экран, премиум-звук Dolby Atmos, идеальный выбор для блокбастеров.</p>
@@ -102,7 +102,7 @@
           </article>
 
           <article class="hall">
-            <div class="hall-img" style="background-image:url('https://picsum.photos/seed/hall2/800/500')"></div>
+            <div class="hall-img" style="background-image:url('img/premium.png')"></div>
             <div class="hall-body">
               <h3>Премиум</h3>
               <p class="muted">Комфортные кресла-реклайнеры, отдельный бар и расширенное меню.</p>
@@ -110,7 +110,7 @@
           </article>
 
           <article class="hall">
-            <div class="hall-img" style="background-image:url('https://picsum.photos/seed/hall3/800/500')"></div>
+            <div class="hall-img" style="background-image:url('img/defolt.jpg')"></div>
             <div class="hall-body">
               <h3>Обычный</h3>
               <p class="muted">Просторный зал со стерео звуком.</p>
@@ -138,11 +138,10 @@
           </div>
 
           <div class="map-card">
-            <!-- Заглушка карты. Замени src на код Google Maps / Yandex / OpenStreetMap iframe -->
             <iframe
               title="Карта"
-              src="https://www.openstreetmap.org/export/embed.html?bbox=21.0122%2C52.2297%2C21.0122%2C52.2297&layer=mapnik"
-              style="width:100%;height:320px;border:0" loading="lazy"></iframe>
+              src="https://yandex.ru/map-widget/v1/?ll=47.638540%2C42.881142&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjU3MTQ4OBJz0KDQvtGB0YHQuNGPLCDQoNC10YHQv9GD0LHQu9C40LrQsCDQlNCw0LPQtdGB0YLQsNC9LCDQmtCw0YHQv9C40LnRgdC6LCDQnNCw0YXQsNGH0LrQsNC70LjQvdGB0LrQsNGPINGD0LvQuNGG0LAsIDEwMiIKDdyNPkIVSoYrQg%2C%2C&z=16.93"
+              style="width:100%;height:320px;border:0;border-radius:15px;" loading="lazy"></iframe>
           </div>
         </div>
 
