--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <span class="cart-count" id="cartCount">0</span>
           </button>
         </div>
+        <button class="hamburger" id="hamburger" aria-label="Открыть меню">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </div>
     </div>
 
